--- a/index.Rmd
+++ b/index.Rmd
@@ -191,7 +191,81 @@ Output any matrix to a txt file using commas or tabs to separate column values, 
 ```
 
 
+##3.4 Harder Problems
 
+#Question 1 
+The FizzBuzz Problem. List the numbers from 1 to 100 with the following constraints. If the number can be divided by three evenly, then print Fizz instead of the number. If the number can be divided by five evenly, then print Buzz instead of the number. Finally, if the number can be divided by three and five evenly, then print FizzBuzz instead of the number. The answer could look something like this:
+
+
+```{r}
+for (a in 1:100) {
+ if (a %% 3 == 0) {print("Fizz")}
+ else if (a %% 5 == 0) {print("Buzz")}
+ else print(a)
+}
+
+```
+#Question 2
+Frequency Counts Take text as input, and be able to produce a table that shows the counts for each character in the text. This problem is related to the earlier easy problem asking you to count the number of times that a single letter appears in a text. The slightly harder problem is the more general version: count the frequencies of all unique characters in a text.
+```{r}
+a<-"some text that has some letters"
+
+
+
+```
+
+
+
+#Question 3 * ask*
+Test the Random Number Generator Test the random number generator for a flat distribution. Generate a few million random numbers between 0 and 100. Count the number of 0s, 1s, 2s, 3s, etc. all the way up to 100. Look at the counts for each of the numbers and determine if they are relatively equal. For example, you could plot the counts in Excel to make a histogram. If all of the bars are close to being flat, then each number had an equal chance of being selected, and the random number generator is working without bias.
+
+```{r}
+a<-runif(100,0,100)
+hist(a)
+```
+
+
+#Question 4 
+Create a multiplication table Generate a matrix for a multiplication table. For example, the labels for the columns could be the numbers 1 to 10, and the labels for the rows could be the numbers 1 to 10. The contents of each of the cells in the matrix should be correct answer for multiplying the column value by the row value.
+
+```{r}
+X<-c(1,2,3,4,5,6,7,8,9,10)
+x*2
+for(i in 1:10) {
+print(paste(X,'x', i, '=', X*i))
+}
+
+```
+
+
+
+#Question 5 *ask to explain*
+Encrypt and Decrypt the Alphabet Turn any normal english text into an encrypted version of the text, and be able to turn any decrypted text back into normal english text. A simple encryption would be to scramble the alphabet such that each letter corresponds to a new randomly chosen (but unique) letter.
+```{r}
+old <- c("A B C D E F G H I J K L M N O P Q R S T U V W X Y Z ", "a b c d e f g h i j k l m n  o p q r s t u v w x y z", 0:9)
+
+new <- sample(old)
+
+old_string <- paste(old, collapse = "")
+new_string <- paste(new, collapse = "")
+
+encrypt <- function(message) {
+  chartr(old_string, new_string, message)
+}
+
+decrypt <- function(message) {
+  chartr(new_string, old_string, message)
+}
+
+```
+
+
+# Question  6 
+Your task here is to write an algorithm that can simulate playing the above depicted Snakes and Ladders board. You should assume that each roll of the dice produces a random number between 1 and 6. After you are able to simulate one played game, you will then write a loop to simulate 1000 games, and estimate the average number of dice rolls needed to successfully complete the game.
+```{r}
+sample(c(1,2,3,4,5,6),1)
+
+```
 
 
 
