--- a/Home.Rmd
+++ b/Home.Rmd
@@ -1,6 +1,13 @@
 ---
-title: "Home"
-output: html_document
+title: "HOME"
+output:
+  html_document:
+    toc: true
+    toc_float: true
+    collapsed: false
+    number_sections: false
+    toc_depth: 1
+    #code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
