--- a/IntailBuildingBlocks.Rmd
+++ b/IntailBuildingBlocks.Rmd
@@ -1,7 +1,15 @@
 ---
-title: " Intail Building Blocks "
-output: html_document
+title: "Intail Building Blocks"
+output:
+  html_document:
+    toc: true
+    toc_float: true
+    collapsed: false
+    number_sections: false
+    toc_depth: 1
+    #code_folding: hide
 ---
+
 
 <style type="text/css">
 .title {
